feat: add some features and fixes

--- a/src/main/resources/keys/sql.properties
+++ b/src/main/resources/keys/sql.properties
@@ -7,11 +7,12 @@ USER_GETBYID    = SELECT * FROM users WHERE id = ?
 USER_VERIFY     = SELECT * FROM users WHERE username = ? AND password = ?
 
 # TABLE PRODUCTS
-PRODUCT_GETALL  = 
+PRODUCT_GETALL  = SELECT * FROM products
 PRODUCT_INSERT  = 
 PRODUCT_UPDATE  = 
 PRODUCT_DELETE  = 
 PRODUCT_GETBYID = 
+PRODUCT_FILTER =
 
 # TABLE SALES
 SALE_GETALL     =
