feat: add some features

--- a/src/main/resources/keys/sql.properties
+++ b/src/main/resources/keys/sql.properties
@@ -1,31 +1,39 @@
-# TABLE USERS
-USER_GETALL     = SELECT * FROM users
-USER_INSERT     = INSERT INTO users (name, lastname, username, password, email, dni, phone, birthdate, gender, payment_method_id, address_id) VALUES (?,?,?,?,?,?,?,?,?,?,?)
-USER_UPDATE     = UPDATE users SET name=?, lastname=?, username=? password=?, email=?, dni=?, phone=?, birhdate=?, gender=?, payment_method_id=?, adress=? WHERE id=?
-USER_DELETE     = DELETE FROM users WHERE id = ?
-USER_GETBYID    = SELECT * FROM users WHERE id = ?
-USER_VERIFY     = SELECT * FROM users WHERE username = ? AND password = ?
+    # TABLE USERS
+USER.GETALL=SELECT * FROM users
+USER.INSERT=INSERT INTO users VALUES (null,?,?,?,?,?,?,?,?,?,?,null)
+USER.UPDATE=UPDATE users SET user_name=?, user_lastname=?, user_username=?, user_password=?, user_email=?, user_dni=?, user_phone=?, user_birthdate=?, user_gender=?, user_address=? WHERE user_id=?
+USER.DELETE=DELETE FROM users WHERE user_id = ?
+USER.GETBYID=SELECT * FROM users WHERE user_id = ?
+USER.VERIFY=SELECT * FROM users WHERE user_username = ? AND user_password = ?
 
 # TABLE PRODUCTS
-PRODUCT_GETALL  = SELECT * FROM products
-PRODUCT_INSERT  = 
-PRODUCT_UPDATE  = 
-PRODUCT_DELETE  = 
-PRODUCT_GETBYID = 
-PRODUCT_FILTER =
+PRODUCT.GETALL={ call sp_getProducts }
+PRODUCT.INSERT=INSERT INTO products VALUES (null,?,?,?,?,?,?,?,null,?)
+PRODUCT.UPDATE=UPDATE products SET product_name=?, product_description=?, product_price=?, product_brand=?, product_stock=?, product_isActive=?, product_image=?, category_id=? WHERE product_id=?
+PRODUCT.DELETE=DELETE FROM products WHERE product_id=?
+PRODUCT.GETBYID={ call sp_getProductById(?) }
+PRODUCT.FILTER=SELECT * FROM products WHERE product_name LIKE '?%'
 
-# TABLE SALES
-SALE_GETALL     =
-SALE_INSERT     =
-SALE_UPDATE     =
-SALE_DELETE     =
-SALE_GETBYID    =
+# TABLE ORDERS
+ORDER.GETALL={ call sp_getOrders }
+ORDER.INSERT=INSERT INTO orders VALUES (null,?,?,?,?,?,null,?)
+ORDER.UPDATE=UPDATE orders SET order_date=?, order_subtotal=?, order_total=?, order_status=?, order_payment_id, user_id=? WHERE order_id=?
+ORDER.DELETE=DELETE FROM orders WHERE order_id=?
+ORDER.GETBYID={ call sp_getOrderById(?) }
+
+# TABLE ORDERLINES
+ORDERLINE.GETALL={ call sp_getOrderlines }
+ORDERLINE.INSERT=INSERT INTO orderlines VALUES (null,?,?,null,?,?)
+ORDERLINE.UPDATE=UPDATE orderlines SET orderline_quantity=?, orderline_total=?, order_id=?, product_id=? WHERE orderline_id=?
+ORDERLINE.DELETE=DELETE FROM orderlines WHERE order_id=?
+ORDERLINE.GETBYID={ call sp_getOrderlineById(?) }
 
 # TABLE CATEGORIES
-CATEGORY_GETALL     = ""
-CATEGORY_INSERT     = ""
-CATEGORY_UPDATE     = ""
-CATEGORY_DELETE     = ""
-CATEGORY_GETBYID    = ""
+CATEGORY.GETALL=SELECT * FROM categories
+CATEGORY.INSERT=INSERT INTO categories VALUES (null,?,null)
+CATEGORY.UPDATE=UPDATE categories SET category_name=? WHERE category_id=?
+CATEGORY.DELETE=DELETE FROM categories WHERE category_id=?
+CATEGORY.GETBYID=SELECT * FROM categories WHERE category_id=?
 
-# TABLE 
+# TABLE ADMIN
+ADMIN.VERIFY=SELECT * FROM admin WHERE admin_username=? AND admin_password=?
